# CodeReviewAI

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  depends.py  docker-compose.yaml  pyproject.toml
repositories/: github_repository.py  open_ai_repository.py  redis_repository.py
routing/: review.py
schemas/: review.py
services/: review.py
